--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ code {
     monospace;
 }
 
-/* ray test touch < */
 :root {
   --radius: 2px;
   --blue: #1e88e5;
@@ -66,7 +65,7 @@ body {
   color: #333;
   position: relative;
   font-family: var(--font-list);
-  -webkit-font-smoothing: antialiased
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
@@ -81,4 +80,3 @@ a:hover {
 a:visited {
   color: #0050a0
 }
-/* ray test touch > */
